--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:label="RandsLifestyle"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="com.off.asithembiso.rands.LoginActivity" />
@@ -25,10 +23,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="com.off.asithembiso.rands.RegisterActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".StartMenuActivity">
+            <intent-filter>
+                <action android:name="com.off.asithembiso.rands.StartMenuActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
